--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "express-validator": "^6.10.0",
     "mongodb": "^3.6.6",
     "mongoose": "^5.12.4",
-    "swagger-jsdoc": "*",
+    "swagger-jsdoc": "6.0.0",
     "swagger-ui-express": "^4.1.6"
   },
   "devDependencies": {
